# smac

./: Cargo.toml  LICENSE  readme.md  rust-analyzer.toml
src/: lib.rs
