[package]
name = "smac"
version = "0.2.0"
edition = "2024"
description = "A small MAC address parser in no_std Rust"
authors = ["Alexander Flesher"]
repository = "https://github.com/AlexanderFlesher/smac"
license = "MIT"
readme = "readme.md"
categories = ["no-std"]

[features]
default = []
zerocopy = ["dep:zerocopy"]

[dependencies]
zerocopy = { version = "0.8.27", optional = true, features = ["derive"] }
